prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/fp_exp_expected.nut
// EXPECT_ERROR: "exponent expected"
let x = 1.0e
